--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+  --light-gray:#E0E0E0 ;
   --ligth-violet: #7B75F1;
   --dark-violet:	#6040bf; 
   --ligth1-blue: #5188F5; 
@@ -8,18 +9,26 @@
 
 }
 .container{
-padding: 5px;
-color: var(--black);
+
+  padding: 5px;
+  color: var(--black);
 }
 
-
+.hero_container .row
+{
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+}
 .hero_container
 {
+
   padding: 50px;
+  border: 1px solid var(--light-gray);
 }
 .hero_container p
 {
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 20px;
   color: var(--black);
   font-size: 30px;
 }
@@ -27,6 +36,22 @@ color: var(--black);
 .hero-image
 {
   object-fit: cover;
+}
+
+.btn-about
+{
+  color: var(--ligth1-blue);
+  border: 1px solid var(--ligth1-blue);
+}
+
+.btn-about:hover{
+background-color:var(--ligth1-blue);
+}
+
+.hero_container
+{
+  padding: 50px;
+  border: 1px solid var(--light-gray);
 }
 
 .navbar
@@ -49,8 +74,33 @@ color: var(--black);
 }
 
 
+h2
+{
+  padding-top: 50px;
+  padding-bottom:50px;
+  color:var(--black);
+}
+h3 {
+color: var(--white);
+}
+#tecnologias {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  border-top: 1px solid var(--light-gray);
+}
 
+#about{
+  padding-top: 50px;
+  border-top: 1px solid var(--light-gray);
 
+}
+
+h4
+{
+color: var(--black);
+font-weight: lighter;
+
+}
 .social-link {
   display: inline-block;
   width: 50px;
@@ -77,6 +127,7 @@ color: var(--black);
 
 #footer{
   background: linear-gradient(90deg,var( --ligth-violet) 10%,var(--ligth1-blue),var(--ligth2-blue)90% );
+
 }
 
 #footer a {
