hover active on footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,34 +69,33 @@ background-color:var(--ligth1-blue);
 }
 
 .nav_text {
-  color: var(--white)!important;
-  font-size: 20px !important;
-  font-weight: lighter !important;
-  display: flex !important;
-  align-items: center !important;
+  color: var(--white);
+  font-size: 20px ;
+  font-weight: lighter ;
+  display: flex ;
+  align-items: center ;
   padding: 0 50px ;
-  transition: .2s ease-in-out all !important;
+  transition: .2s ease-in-out all ;
 }
 
 .nav_text:hover{
-  color: var(--white) !important;
-  font-size: 25px !important;
+  color: var(--white) ;
+  font-size: 25px ;
 }
 
 .nav_text2 {
   padding: 0px;
-  color: var(--white)!important;
-  font-size: 18px !important;
-  font-weight: lighter !important;
-  display: flex !important;
-  align-items: center !important;
-  transition: .2s ease-in-out all !important;
+  color: var(--white);
+  font-size: 18px ;
+  font-weight: lighter ;
+  display: flex ;
+  align-items: center ;
+  transition: .2s ease-in-out all ;
   
 }
 
 .nav_text2:hover{
   color: #909090 !important;
-  
 }
 
 
@@ -286,6 +285,7 @@ h5
 
 @media (max-width: 991px) 
 {
+
 .navbar-brand img{
     width: 50px;
     height:  50px;
@@ -313,6 +313,7 @@ h5
   align-items: center;
   justify-content: center;
   padding: 0;
+  
 
 }
 
@@ -350,4 +351,21 @@ navbar-toggler:focus {
   padding-left: 0px;
   }
 
+  
+  .nav_text {
+    padding: 0px;
+    color: var(--white);
+    font-size: 15px ;
+    font-weight: lighter ;
+    display: flex ;
+    align-items: center ;
+    transition: .2s ease-in-out all  ;
+    
+  }
+  .nav_text:hover{
+    font-size: 17px;
+    color: #909090;
+    
+  }
+  
 }
