--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --light-gray:#E0E0E0 ;
   --dark-gray:gray;
   --ligth-violet: #7B75F1;
+  --ligth2-violet: #D7D5FA;
   --dark-violet:	#6040bf; 
   --ligth1-blue: #5188F5; 
   --ligth2-blue: #1F9EFB;
@@ -56,6 +57,21 @@ background-color:var(--ligth1-blue);
 
 }
 
+.btn-more
+{
+  color: white;
+  border: 1px solid var(--ligth-violet);
+  background-color:var(--ligth-violet);
+  font-size: 15px;
+   
+}
+
+.btn-more:hover{
+  background-color:var(--ligth-violet);
+
+}
+
+
 
 .navbar-nav .nav-item{
   padding-left: 25px;
@@ -100,6 +116,10 @@ background-color:var(--ligth1-blue);
   color: #909090 !important;
 }
 
+#tecnologias h2{
+  font-family: 'Lato', sans-serif;
+  padding-top: 20px;
+}
 
 h2
 {
@@ -180,22 +200,73 @@ width: 100px;
 
 .card{
   font-family: 'Lato', sans-serif;
+  border-style: solid;
+  border-color:var( --light-gray);
+  
+}
+
+.card-button{
+  background-color: #7A75F1; /* Green */
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  font-size: 13px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 
-.card-body .card-text{
+.card-button:hover {
+  background-color: #7A75F1;
+  box-shadow: 0 10px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  
+}
+     
+
+.card-color {
+  background-color: #7A75F1;
+  border:5px;
+  border-radius: 4px 3px 6px / 2px 4px;
+ border-left: -10px;
+
+}
+
+.modal-header
+{
+padding: 10px;
+}
+
+.modal-content p{
+padding-right: 25px;
+padding-left: 25px;
+}
+.card-body {
+  align-items: center ;
+
+}
+
+.card-body .card-text
+{
   color:var(--black);
   font-size: 18px;
   text-align: justify;
+  
+  align-items: center ;
+ 
 }
 
 .card-body .card-title{
+  
   color:var(--black);
   font-weight: bold;
 }
 
 .card{
   text-align: justify;
+  
+   
 }
 
 .card-image{
@@ -203,16 +274,57 @@ width: 100px;
   align-items: center;
   justify-content: center;
   padding: 0;
+  
+
 
 }
 
 #tecnologias {
-  padding-top: 50px;
-  padding-bottom: 300px;
-  border-top: 1px solid var(--light-gray);
+  padding-top: 10px;
+  padding-bottom: 100px;
+ color: black;
+  
+  height: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+
+.container3{
+  padding-top: 70px;
+  padding-bottom: 100px;
+  background-image: url("../images/image6.jfif");
+
+  height: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.container2 {
+
+  padding-top: 100px;
+  padding-bottom: 300px;
+  background-image: url("../images/back__.png");
+  border-top: 1px solid var(--light-gray);
+  height: 100%;
+  /* Create the parallax scrolling effect */
+  
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
 #proyectos {
+  
  text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -239,6 +351,7 @@ h5
 {
   text-transform: uppercase;
   font-size: 20px;
+ 
 }
 .social-link {
   display: inline-block;
@@ -268,6 +381,9 @@ h5
   color: var(--white);
  
 }
+
+
+
 
 #footer a , #footer p {
   color: var(--white);
@@ -326,11 +442,7 @@ h5
   padding-bottom: 50px;
 }
 
-#tecnologias {
-  
-  padding-bottom: 50px;
- 
-}
+
 
 .no-gutters{
   display: flex;
