--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,17 @@
   
   color: var(--black);
 }
+.container4{
+  
+  margin: 0px 100px 100px;
+  padding-bottom: 50px;
+  padding-top: 110px;
+ 
+}
+#contact
+{
+  border-top: 1px solid var(--light-gray);
+}
 
 #hero{
   padding-top: 250px;
@@ -29,6 +40,18 @@
 
 }
 
+.language{
+  text-decoration: underline;
+}
+.language_button{
+  background-color: transparent;
+  border: transparent;
+}
+
+.language_button:hover{
+  background-color:#1E9EFB;
+
+}
 
 .hero p
 {
@@ -127,6 +150,7 @@ h2
   padding-top: 50px;
   padding-bottom:50px;
   color:var(--black);
+  text-align: center;
 }
 h3 {
   
@@ -216,14 +240,30 @@ width: 100px;
   margin: 4px 2px;
   cursor: pointer;
 }
-
-
 .card-button:hover {
   background-color: #7A75F1;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   
 }
-     
+   
+.sendbutton{
+  background-color: #7A75F1; /* Green */
+  border: none;
+  color: white !important;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.sendbutton:hover {
+  background-color: #7A75F1;
+  box-shadow: 0 10px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  
+}
+  
 
 .card-color {
   background-color: #7A75F1;
